Causeview Package Complete/ant script/retrieveUnpackaged/objects/Batch_Template__c.object
<CustomObject>
    <fields>
        <fullName>AccountFieldsXml__c</fullName>
        <label>AccountFieldsXml</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ContactFieldXml__c</fullName>
        <label>ContactFieldXml</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EventRegistrationsFieldsXml__c</fullName>
        <label>EventRegistrationsFieldsXml</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GiftDetailFieldsXml__c</fullName>
        <label>GiftDetailFieldsXml</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PaymentFieldsXml__c</fullName>
        <label>PaymentFieldsXml</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ReceiptFieldsXml__c</fullName>
        <label>ReceiptFieldsXml</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RecurringGiftFieldsXml__c</fullName>
        <label>RecurringGiftFieldsXml</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TransactionFieldsXml__c</fullName>
        <label>TransactionFieldsXml</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <picklist>
            <picklistValues>
                <fullName>Individual</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Organisation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Personal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Batch Template</label>
    <nameField>
        <label>Gift Batch Template Name</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01IA00000023QO2MAM_00NA000000AMCccMAH</fullName>
        <active>true</active>
        <field>Gift_Batch__c.Template_Name__c</field>
        <filterItems>
            <field>Batch_Template__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Parent</value>
        </filterItems>
        <isOptional>true</isOptional>
        <name>Gift Batch_Template Name</name>
    </namedFilters>
    <pluralLabel>Batch Templates</pluralLabel>
    <recordTypes>
        <fullName>Cloned</fullName>
        <active>true</active>
        <description>Associated with the Gift Batch (one-to-one)</description>
        <label>Cloned</label>
    </recordTypes>
    <recordTypes>
        <fullName>Parent</fullName>
        <active>true</active>
        <label>Parent</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>